[package]
name = "luny"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
description = "Multi-language TOON DOSE generator for AI-friendly codebase documentation"
license = "MIT"
repository = "https://github.com/jordanrinke/luny"
homepage = "https://github.com/jordanrinke/luny"
documentation = "https://docs.rs/luny"
readme = "README.md"
keywords = ["ai", "documentation", "code-analysis", "tree-sitter", "rag"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
authors = ["Jordan Rinke"]
exclude = [
    "reference/",
    ".ai/",
    "CLAUDE.md",
]

[dependencies]
# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Tree-sitter (multi-language AST parsing)
tree-sitter = "0.24"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"

# Utilities
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
walkdir = "2.5.0"
ignore = "0.4"
globset = "0.4"
glob = "0.3.3"
regex = "1.12.2"
thiserror = "2.0.17"
anyhow = "1.0.100"
rayon = "1.11.0"
once_cell = "1.21.3"

# Token counting
tiktoken-rs = "0.6"

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "luny"
path = "src/main.rs"

[lib]
name = "luny"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
